--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,9 @@
         <cucumber.version>4.3.0</cucumber.version>
         <bonigarcia.version>4.2.2</bonigarcia.version>
         <picocontainer.version>1.2.5</picocontainer.version>
+        <assertj.version>3.11.1</assertj.version>
         <junit>4.12</junit>
+        <javafaker.version>1.0.2</javafaker.version>
     </properties>
     <dependencies>
         <dependency>
@@ -59,6 +61,16 @@
             <groupId>io.github.bonigarcia</groupId>
             <artifactId>webdrivermanager</artifactId>
             <version>${bonigarcia.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>${assertj.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+            <version>${javafaker.version}</version>
         </dependency>
     </dependencies>
 
